src/test/success/boolean_argument.egern
func test(arg: boolean): int {
    if (arg) {
        return 1;
    } else {
        return 0;
    }
    return -1;
}

print(test(true));
print(test(false));
