src/test/fail/return_wrong_array_type_fail.egern
func arrayify(arg: int): [boolean] {
    return [arg]
}

print(arrayify(4));
